# python-refactor-playground

./: .gitignore  ESTRUCTURA.md  EXERCISE_README.md  EXERCISE_SCRIPT.md  EXERCISE_SCRIPT_WINDOWS.md  Makefile  README.md  main.py  pyproject.toml  run.bat  run.ps1  setup.py  setup_windows.bat
src/: __init__.py
src/cinema/: __init__.py  cinema_manager.py  main.py  movie.py  ticket.py
tests/: __init__.py  test_cinema.py
tools/: analyze_code_quality.py  auto_code_fixer_libraries_only.py  benchmark_code_quality.py
